--- a/index.html
+++ b/index.html
@@ -2,16 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Service Status - Simple Status Pages for Your Projects</title>
+  <title>status.githack.com - Simple Status Pages for Your Projects</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Create simple status pages for your projects and services. Monitor uptime and display service status with a clean, professional interface. Easy to deploy and customize.">
   <meta name="keywords" content="status page, service status, uptime monitoring, service health, project status, website status, API status">
   <meta name="author" content="status.githack.com">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://status.githack.com">
-  <meta name="theme-color" content="#0d6efd">
-  <meta name="application-name" content="Service Status">
-  <meta name="mobile-web-app-title" content="Service Status">
+  <meta name="application-name" content="status.githack.com">
+  <meta name="mobile-web-app-title" content="status.githack.com">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
   <script>
