--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>status.githack.com - Simple Status Pages for Your Projects</title>
+  <title>Simple Status Pages for Your Projects · status.githack.com</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Create simple status pages for your projects and services. Monitor uptime and display service status with a clean, professional interface. Easy to deploy and customize.">
   <meta name="keywords" content="status page, service status, uptime monitoring, service health, project status, website status, API status">
