--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <link rel="canonical" href="https://status.githack.com">
   <meta name="application-name" content="status.githack.com">
   <meta name="mobile-web-app-title" content="status.githack.com">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="default">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-status-bar-style" content="default">
   <script>
     function setTheme() {
       const theme = window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light';
