--- a/index.html
+++ b/index.html
@@ -117,8 +117,20 @@
             <div class="text-end text-muted small">$upTime in the last 30 days</div>
           </div>
         </div>
+        <div id="noDataAlertTemplate" class="alert alert-warning mt-4">
+          <h4 class="alert-heading">No Data</h4>
+          <p class="mb-0">No monitoring data found for this repository. Please check your configuration or wait for the first check to complete.</p>
+        </div>
       </div>
     </main>
+    <footer class="text-center text-muted small mt-5 pt-4 border-top border-2 border-light-subtle">
+      <div class="mb-2">
+        <a href="/" class="link-secondary text-decoration-none me-3">Main page</a>
+        <a href="https://github.com/neoascetic/status.githack.com" class="link-secondary text-decoration-none me-3" target="_blank">GitHub</a>
+        <a href="https://github.com/neoascetic/status.githack.com/generate" class="link-secondary text-decoration-none me-3" target="_blank">Create your own</a>
+      </div>
+      <div>© 2025 Pavel Puchkin</div>
+    </footer>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
   <script src="index.js"></script>
