Call to action at the bottom

--- a/index.html
+++ b/index.html
@@ -124,10 +124,13 @@
       </div>
     </main>
     <footer class="text-center text-muted small mt-5 pt-4 border-top border-2 border-light-subtle">
-      <div class="mb-2">
+      <div class="mb-3">
         <a href="/" class="link-secondary text-decoration-none me-3">Main page</a>
-        <a href="https://github.com/neoascetic/status.githack.com" class="link-secondary text-decoration-none me-3" target="_blank">GitHub</a>
-        <a href="https://github.com/neoascetic/status.githack.com/generate" class="link-secondary text-decoration-none me-3" target="_blank">Create your own</a>
+        <a href="https://github.com/neoascetic/status.githack.com" class="link-secondary text-decoration-none me-3" target="_blank">Source</a>
+      </div>
+      <div class="mb-3">
+        <span class="text-muted">Want your own status page? </span>
+        <a href="https://github.com/neoascetic/status.githack.com#why-use-statusgithackcom" class="link-primary text-decoration-none fw-medium" target="_blank">Create one for free</a>
       </div>
       <div>© 2025 Pavel Puchkin</div>
     </footer>
