--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <meta name="mobile-web-app-title" content="status.githack.com">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="mobile-web-app-status-bar-style" content="default">
+  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🟢</text></svg>">
   <script>
     function setTheme() {
       const theme = window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light';
