Better styles for mobile

--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
   </style>
 </head>
 <body>
-  <div class="py-5 container-limited">
+  <div class="py-5 container-limited px-3 px-md-0">
     <header class="mb-4">
       <h1 class="display-4 text-center">Service status</h1>
       <div class="text-center mb-3 placeholder-glow">
         <p id="repo-description" class="mb-2 text-muted placeholder col-6 rounded mx-auto bg-secondary-subtle">&nbsp;</p>
-        <a id="repo-link" href="#" target="_blank" class="text-decoration-none d-block placeholder col-4 rounded mx-auto bg-secondary-subtle">&nbsp;</a>
+        <a id="repo-link" class="text-break" href="#" target="_blank" class="text-decoration-none d-block placeholder col-4 rounded mx-auto bg-secondary-subtle">&nbsp;</a>
       </div>
     </header>
     <main>
