--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <span class="text-muted">Want your own status page? </span>
         <a href="https://github.com/neoascetic/status.githack.com#why-use-statusgithackcom" class="link-primary text-decoration-none fw-medium" target="_blank">Create one for free</a>
       </div>
-      <div>© 2025 Pavel Puchkin</div>
+      <div>© 2025 <a href="https://github.com/neoascetic" class="text-decoration-none">Pavel Puchkin<a></a></div>
     </footer>
   </div>
   <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
